# pysecuritytxt

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: mypy.yml  pytest.yml  release.yml
docs/source/: api_reference.rst  conf.py  index.rst
pyproject/: __init__.py  api.py
pysecuritytxt/: __init__.py  api.py
tests/: test.py  test_web.py
