[tool.poetry]
name = "pysecuritytxt"
version = "1.3.0"
description = "Python CLI and module for querying security.txt files on domains."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/Lookyloo/pysecuritytxt"
documentation = "https://pysecuritytxt.readthedocs.io/en/latest/index.html"

readme = "README.md"

classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Security',
    'Topic :: Internet',
]

[tool.poetry.scripts]
pysecuritytxt = 'pysecuritytxt:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
Sphinx = [
    {version = "<7.2", python = "<3.9", optional = true},
    {version = "^7.2", python = ">=3.9", optional = true}
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.18.0", python = ">=3.9"},
    {version = "^8.19.0", python = ">=3.10"}
]
pytest = "^8.0.2"

[tool.poetry.extras]
docs = ["Sphinx"]

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
