[project]
name = "pysecuritytxt"
version = "1.3.3"
description = "Python CLI and module for querying security.txt files on domains."
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.4)"
]

[project.urls]
repository = "https://github.com/Lookyloo/pysecuritytxt"
issues = "https://github.com/Lookyloo/pysecuritytxt/issues"
documentation = "https://pysecuritytxt.readthedocs.io/en/latest/index.html"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
pysecuritytxt = 'pysecuritytxt:main'

[project.optional-dependencies]
docs = ["Sphinx (>=8.2.3) ; python_version >= \"3.11\""]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
types-requests = "^2.32.0.20250602"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
